<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.code.aon</groupId>
		<artifactId>aon.parent</artifactId>
		<version>9.23-SNAPSHOT</version>
	</parent>
	<groupId>solutions.aon</groupId>
	<artifactId>aon.seg.social</artifactId>
	<name>SEG-SOCIAL</name>
	<description>SEG SOCIAL</description>
	<build>
		<plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-jar-plugin</artifactId>
			  <executions>
			    <execution>
			      <goals>
			        <goal>test-jar</goal>
			      </goals>
			    </execution>
			  </executions>
			</plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>

        </plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20230227</version>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>org.htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
			<version>3.1.0</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.4</version>
			<scope>compile</scope>
		</dependency>

		<!-- Test dependecies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13-beta-1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>3.0.0-alpha2</version>
			<scope>test</scope>
		</dependency>
	
	</dependencies>


</project>
